first pass at updating website copy

--- a/templates/about.html
+++ b/templates/about.html
@@ -25,7 +25,7 @@ theme_dark=True %} {% include 'navbar.html' %} {% endwith %}
       class="contents d-flex flex-column justify-content-center align-items-center"
     >
       <h1 class="video-title">
-        {{gettext("It’s time to cut out traditional intermediaries")}}
+        {{gettext("It’s time to bring crypto mainstream")}}
       </h1>
       <button
         id="about-video-button"
@@ -41,14 +41,12 @@ theme_dark=True %} {% include 'navbar.html' %} {% endwith %}
     class="world-class d-flex flex-column justify-content-center align-items-center"
   >
     <h1 class="segment-title ml-4 mr-4">
-      {{gettext("Origin enables true peer-to-peer commerce")}}
+      {{gettext("Origin enables decentralized commerce and finance")}}
     </h1>
     <div class="segment-subtitle ml-3 mr-3">
-      {{gettext("Origin is a startup headquartered in San Francisco, but we also
-      have team members in China, Korea, Russia, India, New Zealand, and even
-      Slovenia. Our 800+ investors include top venture capitalists and
+      {{gettext("Origin is a fully distributed team. Our 800+ investors include top venture capitalists and
       cryptocurrency funds all over the world.")}}
-      {{gettext("Origin Tokens (OGN) are held by over 25,000")}}&nbsp;<a href="https://etherscan.io/token/0x8207c1ffc5b6804f6024322ccf34f29c3541ae26">{{gettext("token holders.")}}</a>
+      {{gettext("Origin Tokens (OGN) are held by over 30,000")}}&nbsp;<a href="https://etherscan.io/token/0x8207c1ffc5b6804f6024322ccf34f29c3541ae26">{{gettext("token holders.")}}</a>
     </div>
     <div
       class="d-flex justify-content-center mt-4 pt-2 flex-column flex-md-row"
@@ -79,39 +77,10 @@ theme_dark=True %} {% include 'navbar.html' %} {% endwith %}
       >
         <div class="section-name">{{gettext("Lower Fees")}}</div>
         <div class="section-text mb-0">
-          {{gettext("Centralized intermediaries often charge 20-30%% in
-          transaction fees. Airbnb grossed $2.6B in fees in 2017, while Uber
-          took home a monumental $11.8B in fees in 2018.")}}
+          {{gettext("Centralized platforms for music and art often charge incredibly high fees, leaving the creators with a small fraction of the value generated and causing consumers to overpay for goods and experiences. Traditional payment processors also charge significant fees.")}}
         </div>
         <div class="section-text">
-          {{gettext("By removing the middlemen, Origin removes these fees.
-          Buyers and sellers can now share the savings from the fees that are no
-          longer paid to traditional marketplace operators.")}}
-        </div>
-        <div
-          class="d-flex justify-content-between links mt-md-4 pt-3 flex-column flex-md-row"
-        >
-          <a
-            class="p-1 p-md-0"
-            href="https://skift.com/2019/01/16/airbnb-claims-it-was-profitable-in-2018/"
-            target="_blank"
-            rel="noopener noreferrer"
-            >www.skift.com</a
-          >
-          <a
-            class="p-1 p-md-0"
-            href="https://www.reuters.com/article/us-uber-results/uber-posts-50-billion-in-annual-bookings-as-profit-remains-elusive-ahead-of-ipo-idUSKCN1Q42CI"
-            target="_blank"
-            rel="noopener noreferrer"
-            >www.reuters.com</a
-          >
-          <a
-            class="p-1 p-md-0"
-            href="https://www.juniperresearch.com/press/press-releases/sharing-economy-revenues-to-double-by-2022"
-            target="_blank"
-            rel="noopener noreferrer"
-            >www.juniperresearch.com</a
-          >
+          {{gettext("Decentralized commerce reduces the power of middlemen and their ability to charge egregious fees. Both buyers and sellers can share in the savings. With OUSD, Origin provides an alternative to high cost payment rails. Ordinary people and businesses can reduce costs and benefit from superior yields provided by OUSD.")}}
         </div>
       </div>
       <div
@@ -144,18 +113,10 @@ theme_dark=True %} {% include 'navbar.html' %} {% endwith %}
       >
         <div class="section-name">{{gettext("Better Incentives")}}</div>
         <div class="section-text mb-0">
-          {{gettext("Uber and Lyft recently IPOed. WeWork and Airbnb are soon to
-          follow suit. None of the early participants on these platforms
-          benefited despite being critical to their success.")}}
+          {{gettext("Centralized platforms and financial institutions often have an antagonistic relationship with their customers. Fees are neccessary to make these companies successful. This creates a perverse relationship where customers have no stake in the success they help create.")}}
         </div>
         <div class="section-text">
-          {{gettext("In contrast, Origin enables everyone to own a piece of the
-          network. Buyers and sellers can earn Origin Tokens (OGN) simply by
-          using Origin-enabled applications to transact with one another.
-          Developers, affiliates, and marketplace operators can earn OGN by
-          promoting and marketing sellers' listings. When everyone owns a piece
-          of the network, ecosystem participants are incentivized to promote the
-          health and growth of Origin. ")}}
+          {{gettext("In contrast, Origin enables everyone to own a piece of the network. Fans and collectors can have a direct stake in the success of their favorite community with NFTs. Yield generated by OUSD is distributed fairly to all holders. Holders of Origin Tokens (OGN) can participate in governance to decide the future rules and direction of the network and also have a stake in the success of Origin’s products. When everyone owns a piece of the network, everyone is incentivized to help it grow and succeed.")}}
         </div>
       </div>
     </div>
@@ -177,23 +138,7 @@ theme_dark=True %} {% include 'navbar.html' %} {% endwith %}
           Pay.")}}
         </div>
         <div class="section-text">
-          {{gettext("With the advent of cryptocurrencies and the proliferation
-          of inexpensive smartphones, now is the time to enable the unbanked to
-          participate in the new Internet economy. Users from all over the world
-          are now able to transact with each other on Origin-powered
-          marketplaces even if they do not have stable, local banking
-          systems.")}}
-        </div>
-        <div
-          class="d-flex justify-content-start links mt-4 pt-3 flex-column flex-md-row"
-        >
-          <a
-            class="p-2 p-md-0"
-            href="https://www.businessinsider.com"
-            target="_blank"
-            rel="noopener noreferrer"
-            >www.businessinsider.com</a
-          >
+          {{gettext("With the advent of cryptocurrencies and the proliferation of inexpensive smartphones, now is the time to enable the unbanked to participate in decentralized commerce and finance. Anyone with a crypto wallet can participate in the NFT economy. Users from all over the world are now able to access a stable currency with superior yields in OUSD.")}}
         </div>
       </div>
       <div
@@ -226,25 +171,10 @@ theme_dark=True %} {% include 'navbar.html' %} {% endwith %}
       >
         <div class="section-name">{{gettext("More Resilience")}}</div>
         <div class="section-text mb-0">
-          {{gettext("Airbnb is heavily regulated or banned in cities like Paris,
-          Berlin, Tokyo, New York, and even its home city of San Francisco.")}}
+          {{gettext("Decentralized marketplaces promote open and free commerce. Unlike centralized alternatives, they are not single points of failure and can't be banned or shut down. Decentralized commerce is more resilient and promotes efficient markets.")}}
         </div>
         <div class="section-text">
-          {{gettext("Decentralized marketplaces promote open and free commerce.
-          Unlike centralized alternatives, they are not single points of failure
-          and can't be banned or shut down. Decentralized commerce is more
-          resilient and promotes efficient markets.")}}
-        </div>
-        <div
-          class="d-flex justify-content-start links mt-4 pt-3 flex-column flex-md-row"
-        >
-          <a
-            class="p-2 p-md-0"
-            href="https://www.telegraph.co.uk"
-            target="_blank"
-            rel="noopener noreferrer"
-            >www.telegraph.co.uk</a
-          >
+          {{gettext("Decentralized finance lets users take control of their money. They will be able to choose what assets to conduct business with and keep their savings in. Unlike in traditional centralized systems, funds cannot be seized and accounts cannot be shut down. DeFi is powered by smart contracts and code which minimizes the need for trust and limits human intervention and misadventure.")}}
         </div>
       </div>
     </div>
