remove store link

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -50,7 +50,7 @@
             <a href="{{ url_for('about', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("About") }}</a>
             <a href="{{ url_for('team', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Team") }}</a>
             <a href="{{ url_for('investors', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Investors") }}</a>
-            <a href="https://store.originprotocol.com">{{ gettext("Store") }}</a>
+            <!-- <a href="https://store.originprotocol.com">{{ gettext("Store") }}</a> -->
             <a href="{{ universal.JOBS_URL }}">{{ gettext("Jobs") }}</a>
           </div>
         </div>
