adding myself to team profiles

--- a/templates/team.html
+++ b/templates/team.html
@@ -396,6 +396,21 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
               </div>
             </div>
 
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-mark.jpg" class="headshot" alt="Mark Mathis headshot" />
+                </div>
+                <div class="name"><a href="https://github.com/cipherzzz" target="_blank"
+                  rel="noopener noreferrer">{{ gettext("Mark Mathis") }}</a></div>
+                <div class="title">
+                  {{ gettext("Engineer") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Mark Mathis has a broad background in fintech and defi in both the retail and institutional space. As a former touring musician, Mark has a particular interest in seeing artists compensated fairly for their work through decentralized channels.") }}
+                </div>
+              </div>
+            </div>
 
           </div>
         </div>
