--- a/templates/team.html
+++ b/templates/team.html
@@ -407,7 +407,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   {{ gettext("Engineer") }}
                 </div>
                 <div class="bio">
-                  {{ gettext("Mark Mathis has a broad background in fintech and defi in both the retail and institutional space. As a former touring musician, Mark has a particular interest in seeing artists compensated fairly for their work through decentralized channels.") }}
+                  {{ gettext("Mark Mathis has a broad background in fintech and defi. As a former touring musician, Mark has a particular interest in seeing artists compensated fairly for their work through decentralized channels.") }}
                 </div>
               </div>
             </div>
