--- a/templates/brave-dshop-pr.html
+++ b/templates/brave-dshop-pr.html
@@ -32,7 +32,7 @@
           {{gettext("“We are delighted to be a strategic partner of Brave in support of their efforts to push forward decentralized technologies,” says Nick Poulden, technical lead for Dshop - Origin. “Working closely with Brave, we were able to provide a solution that served both their crypto native customers and BAT token holder community while also making it easy for non-crypto users to make purchases on their store. Brave wanted to signal to their token holders that they were committed to decentralized tech while still being able to serve their tens of millions of users who may be unfamiliar with it. Their previous platform could only serve the latter group. Brave’s first NFT collection sale was a smash success and we look forward to continuing a long-term, mutually rewarding relationship with them.”")}}<br /><br />
           <b>{{gettext("About Origin Protocol")}}</b><br />
           {{gettext("Origin Protocol is a leading blockchain technology company founded in 2017 in San Francisco, CA. Origin’s focus is on building platforms that enable peer-to-peer commerce applications with a focus on NFTs and DeFi protocols and applications. We launched the Origin Dollar (OUSD) protocol in 2020 and conducted a record-breaking NFT auction in 2021. Origin Tokens (OGN) are listed on some of the largest exchanges in the world, including Binance Global and Huobi Global. <a href='/'>www.originprotocol.com</a>")}}<br /><br />
-          {{gettext("Media Contact:")}} <br/> pr@originprotocol.com<br /><br />
+          {{gettext("Media Contact:")}} <br/> <a href="mailto:pr@originprotocol.com">pr@originprotocol.com</a><br /><br />
         </div>
       </div>
     </div>
