--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,6 +18,9 @@
 {% endwith %}  
 
 <main class="dashboard-page">
+
+  {%if ogn_stats %}
+
   <section class="title-section blue-section">
     <div class="container">
       <h1>{{gettext("Origin Token Dashboard")}}</h1>
@@ -269,6 +272,8 @@
     </div>
   </section>
 
+  {% endif %}
+
   <section class="exchanges-section white-section">
     <div class="container">
       <h3>{{gettext("Centralized Exchanges")}}</h3>
@@ -281,7 +286,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-2 token-exchange text-center larger">
           <a target="_blank" rel="noopener noreferrer" href="https://www.huobi.com/en-us/exchange/ogn_usdt/">
-            <img src="/static/img/ognToken/huobi.png" />
+            <img src="/static/img/ognToken/huobi.png" style='position:relative; top:-5px'/>
           </a>
         </div>
         <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
@@ -291,7 +296,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-2 token-exchange text-center larger">
           <a target="_blank" rel="noopener noreferrer" href="https://upbit.com/exchange?code=CRIX.UPBIT.BTC-OGN">
-            <img src="/static/img/ognToken/upbit.png" />
+            <img src="/static/img/ognToken/upbit.png" style='position:relative; top:-5px'/>
           </a>
         </div>
         <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
@@ -311,9 +316,14 @@
             <img src="/static/img/ognToken/bittrex-logo.svg" />
           </a>
         </div>
-        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center larger">
+          <a target="_blank" rel="noopener noreferrer" href="https://www.gate.io/trade/OGN_USDT">
+            <img src="/static/img/ognToken/gateio.svg" style='position:relative; top:-5px'/>
+          </a>
+        </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center larger">
           <a target="_blank" rel="noopener noreferrer" href="https://hitbtc.com/ogn-to-btc">
-            <img src="/static/img/ognToken/hitbtc-logo.svg" />
+            <img src="/static/img/ognToken/hitbtc-logo.svg" style='position:relative; top:-14px'/>
           </a>
         </div>
         <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
