add amber and blockchain.com. improvement logo alignment

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -309,8 +309,16 @@
             <img src="/static/img/ognToken/cryptocom-logo.svg" />
           </a>
         </div>
-      </div>
-      <div class="exchanges row mb-5">
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center larger">
+          <a target="_blank" rel="noopener noreferrer" href="https://exchange.blockchain.com/trade/OGN-USD">
+            <img src="/static/img/ognToken/blockchaincom.png" style='position:relative; top:-5px'/>
+          </a>
+        </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center large">
+          <a target="_blank" rel="noopener noreferrer" href="https://pro.ambergroup.io/">
+            <img src="/static/img/ognToken/amber.png" style='position:relative; top:-3px'/>
+          </a>
+        </div>
         <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
           <a target="_blank" rel="noopener noreferrer" href="https://global.bittrex.com/">
             <img src="/static/img/ognToken/bittrex-logo.svg" />
@@ -348,6 +356,7 @@
         </div>
       </div>
     </div>
+    <br><br>
     <div class="container">
       <h3>{{gettext("Decentralized Exchanges")}}</h3>
       <div class="exchanges row mb-5">
@@ -369,12 +378,10 @@
             <img src="/static/img/ognToken/balancer.svg" />
           </a>
         </div>
-        <div class="exchanges row mb-5">
-          <div class="col-12 col-sm-6 col-md-2 token-exchange text-center xxl">
-            <a target="_blank" rel="noopener noreferrer" href="https://kyberswap.com/swap/eth-ogn">
-              <img src="/static/img/ognToken/kyber.svg" />
-            </a>
-          </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center xxl">
+          <a target="_blank" rel="noopener noreferrer" href="https://kyberswap.com/swap/eth-ogn">
+            <img src="/static/img/ognToken/kyber.svg" />
+          </a>
         </div>
       </div>
     </div>
