add coinbase & zb to dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -289,6 +289,16 @@
             <img src="/static/img/ognToken/huobi.png" style='position:relative; top:-5px'/>
           </a>
         </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center larger">
+          <a target="_blank" rel="noopener noreferrer" href="https://pro.coinbase.com/trade/OGN-USD">
+            <img src="/static/img/ognToken/coinbase.png" style='position:relative; top:-10px'/>
+          </a>
+        </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center large">
+          <a target="_blank" rel="noopener noreferrer" href="https://pro.ambergroup.io/">
+            <img src="/static/img/ognToken/amber.png" style='position:relative; top:-3px'/>
+          </a>
+        </div>
         <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
           <a target="_blank" rel="noopener noreferrer" href="https://coinone.co.kr/">
             <img src="/static/img/ognToken/coinone.svg" />
@@ -299,8 +309,13 @@
             <img src="/static/img/ognToken/upbit.png" style='position:relative; top:-5px'/>
           </a>
         </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center large">
+          <a target="_blank" rel="noopener noreferrer" href="https://www.zb.com/en/kline/ogn_usdt">
+            <img src="/static/img/ognToken/zb.svg" />
+          </a>
+        </div>
         <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
-          <a target="_blank" rel="noopener noreferrer" href="#">
+          <a target="_blank" rel="noopener noreferrer" href="https://www.gopax.co.kr/exchange/ogn-krw">
             <img src="/static/img/ognToken/gopax.svg" />
           </a>
         </div>
@@ -312,11 +327,6 @@
         <div class="col-12 col-sm-6 col-md-2 token-exchange text-center larger">
           <a target="_blank" rel="noopener noreferrer" href="https://exchange.blockchain.com/trade/OGN-USD">
             <img src="/static/img/ognToken/blockchaincom.png" style='position:relative; top:-5px'/>
-          </a>
-        </div>
-        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center large">
-          <a target="_blank" rel="noopener noreferrer" href="https://pro.ambergroup.io/">
-            <img src="/static/img/ognToken/amber.png" style='position:relative; top:-3px'/>
           </a>
         </div>
         <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
