--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -364,6 +364,11 @@
             <img src="/static/img/ognToken/hotbit.svg" />
           </a>
         </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center large">
+          <a target="_blank" rel="noopener noreferrer" href="https://www.coinex.com/exchange/ogn-usdt">
+            <img src="/static/img/ognToken/coinex.png" />
+          </a>
+        </div>
       </div>
     </div>
     <br><br>
