add new team members & exchanges to OGN dashboard

--- a/templates/team.html
+++ b/templates/team.html
@@ -412,6 +412,53 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
               </div>
             </div>
 
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-william.jpeg" class="headshot" alt="William Tong headshot" />
+                </div>
+                <div class="name"><a href="https://www.linkedin.com/in/williamjtong/" target="_blank"
+                  rel="noopener noreferrer">{{ gettext("William Tong") }}</a></div>
+                <div class="title">
+                  {{ gettext("Business Development") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("William Tong was a real estate broker before stumbling into the world of NFTs. He quickly built a reputation as a connector and community builder on the Clubhouse app and within the broader NFT collector community.  ") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-chase.png" class="headshot" alt="Chase Colman headshot" />
+                </div>
+                <div class="name"><a>{{ gettext("Chase Colman") }}</a></div>
+                <div class="title">
+                  {{ gettext("Project Manager") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Chase comes from creative + marketing agency life in Los Angeles. She’s managed projects and accounts for clients like YouTube, W Hotels, and Stitch Fix. She's now in charge of creator relationship management at Origin.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-you.png" class="headshot" alt="You headshot" />
+                </div>
+                <div class="name"><a href="https://" target="_blank"
+                  rel="noopener noreferrer">{{ gettext("You?") }}</a></div>
+                <div class="title">
+                  {{ gettext("We're hiring!") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("We are a distributed team with employees all over the world. We have a fast-paced bias-to-action culture and a really big vision for bringing crypto mainstream. Check out our <a href='https://angel.co/originprotocol/jobs'>open-positions on AngelList</a>.") }}
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
