--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -369,12 +369,47 @@
             <img src="/static/img/ognToken/coinex.png" />
           </a>
         </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center larger">
+          <a target="_blank" rel="noopener noreferrer" href="https://trade.kucoin.com/OGN-USDT">
+            <img src="/static/img/ognToken/kucoin.png" />
+          </a>
+        </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center larger">
+          <a target="_blank" rel="noopener noreferrer" href="https://vcc.exchange/exchange/basic?currency=usdt&coin=ogn">
+            <img src="/static/img/ognToken/vcc.png" />
+          </a>
+        </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center larger">
+          <a target="_blank" rel="noopener noreferrer" href="https://www.bitz.ai/exchange/ogn_usdt">
+            <img src="/static/img/ognToken/bitz.png" />
+          </a>
+        </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center large">
+          <a target="_blank" rel="noopener noreferrer" href="https://www.bkex.com/trade/OGN_USDT">
+            <img src="/static/img/ognToken/bkex.png" />
+          </a>
+        </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center large">
+          <a target="_blank" rel="noopener noreferrer" href="https://www.coinbene.com/spot/exchange/OGN_USDT">
+            <img src="/static/img/ognToken/coinbene.png" />
+          </a>
+        </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center large">
+          <a target="_blank" rel="noopener noreferrer" href="https://bilaxy.com/trade/OGN_USDT">
+            <img src="/static/img/ognToken/bilaxy.png" />
+          </a>
+        </div>
       </div>
     </div>
     <br><br>
     <div class="container">
       <h3>{{gettext("Decentralized Exchanges")}}</h3>
       <div class="exchanges row mb-5">
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center xxl">
+          <a target="_blank" rel="noopener noreferrer" href="https://app.1inch.io/#/1/swap/0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee/0x8207c1ffc5b6804f6024322ccf34f29c3541ae26">
+            <img src="/static/img/ognToken/1inch.svg" />
+          </a>
+        </div>
         <div class="col-12 col-sm-6 col-md-2 token-exchange text-center xxl">
           <a target="_blank" rel="noopener noreferrer"
             href="https://exchange.sushiswapclassic.org/#/swap?outputCurrency=0x8207c1FfC5B6804F6024322CcF34F29c3541Ae26">
@@ -398,6 +433,7 @@
             <img src="/static/img/ognToken/kyber.svg" />
           </a>
         </div>
+
       </div>
     </div>
     <div class="container">
