--- a/templates/landing.html
+++ b/templates/landing.html
@@ -39,10 +39,10 @@
   </div>
   <!-- Countdown section -->
   <div class="countdown-block-TEMPHIDE d-flex flex-column justify-content-between align-items-center" style='background-color:white'>
-  <h1 class="clock-title">{{gettext("Subscribe to stay in touch")}}</h1>
+  <h1 class="clock-title">{{gettext("Never miss a drop. Sign up now!")}}</h1>
 
 
-    <div class="segment-subtitle ml-3 mr-3">{{gettext("Be the first to hear when we launch important partnerships, celebrity NFT drops, exchange listings, and new products. Your email will be kept private.")}}</div>
+    <div class="segment-subtitle ml-3 mr-3">{{gettext("Be the first to hear when we launch important partnerships, significant NFT drops, exchange listings, and new products. Your email will be kept private.")}}</div>
     <div class="email-form">
       <form id="mailing-list" class="d-flex" method="post" action="/mailing-list/join">
         <input id="email" class="email-input" type="email" name="email" placeholder="{{gettext("Email")}}">
@@ -54,7 +54,7 @@
   <!-- origin-marketplace-0.23.16.apk -->
   <div class="buy-sell-block d-flex flex-column justify-content-between align-items-center px-3 px-md-0">
     <h1>{{gettext("Origin Products")}}</h1>
-    <div class="segment-subtitle mx-3">{{gettext("Origin’s suite of products is revolutionizing how people shop and conduct business online. Effortlessly create a decentralized e-commerce store with Dshop and earn competitive yields with the Origin Dollar.")}}</div>
+    <div class="segment-subtitle mx-3">{{gettext("Origin Protocol is bringing NFTs and DeFi to the masses. Origin’s flagship products are our NFT platform, which has supported numerous high-profile NFT drops, and Origin Dollar (OUSD), the first stablecoin that earns a yield automatically in users’ wallets. Origin’s platform and governance token is OGN.")}}</div>
     <a class="mb-5 mt-0 btn btn-dark d-flex justify-content-center align-items-center" href="{{ url_for('product', lang_code=CURRENT_LANGUAGE) }}">
       {{gettext("Check out our products")}}</a>
     <div class="d-flex flex-column flex-md-row marketplace align-items-center align-items-md-start">
