--- a/templates/litepaper/exec-summary.html
+++ b/templates/litepaper/exec-summary.html
@@ -1,7 +1,7 @@
 <div id="execsummary">
   <h1>{{gettext("Executive Summary")}}</h1>
   <p>
-    {{gettext("Origin’s mission is to bring peer-to-peer commerce (NFTs) and decentralized finance (DeFi) to the masses.")}}
+    {{gettext("Origin’s mission is to bring non-fungible tokens (NFTs) and decentralized finance (DeFi) to the masses.")}}
   </p>
 
   <p>{{gettext("After three years of building consumer-friendly products in the blockchain space, we’ve learned many valuable lessons.")}}</p>
@@ -10,7 +10,7 @@
       {{gettext("The first significant wave of users of decentralized commerce applications will be those seeking experiences or products they cannot get from centralized alternatives. Many of these early users will be crypto natives. The most prominent product category to emerge is the Non-Fungible Tokens (NFTs) vertical. NFTs do not merely represent digital collectibles but can create entirely new experiences for creators and communities.")}}
     </p></li>
     <li><p>
-      {{gettext("NFTs can function as digital collectible. Further, they can be  tokenized representations of physical goods and collectibles, unlock other digital content, and act as access tokens to digital or in-person experiences. NFTs can be used for a wide array of financial applications and use cases. The design space for NFTs is nearly unlimited and represents an exciting paradigm shift for blockchain technology.")}}
+      {{gettext("NFTs can function as digital collectibles. Further, they can be  tokenized representations of physical goods and collectibles, unlock other digital content, and act as access tokens to digital or in-person experiences. NFTs can be used for a wide array of financial applications and use cases. The design space for NFTs is nearly unlimited and represents an exciting paradigm shift for blockchain technology.")}}
     </p></li>
     <li><p>
       {{gettext("Decentralized Finance (DeFi) is the gateway to unlocking massive new financial opportunities for lenders, creditors, and liquidity providers. Over <a href='https://defipulse.com/' target='_blank' rel='noopener noreferrer'>$40B of value</a> is locked in DeFi protocols, and this number is expected to grow by multiple orders of magnitude in the next few years. However, we are still in the very early innings of the DeFi movement.")}}
