--- a/templates/about.html
+++ b/templates/about.html
@@ -41,7 +41,7 @@ theme_dark=True %} {% include 'navbar.html' %} {% endwith %}
     class="world-class d-flex flex-column justify-content-center align-items-center"
   >
     <h1 class="segment-title ml-4 mr-4">
-      {{gettext("Origin enables decentralized commerce and finance")}}
+      {{gettext("Origin Protocol is bringing NFTs and DeFi to the masses")}}
     </h1>
     <div class="segment-subtitle ml-3 mr-3">
       {{gettext("Origin is a fully distributed team. Our 800+ investors include top venture capitalists and
