--- a/templates/investors.html
+++ b/templates/investors.html
@@ -42,10 +42,11 @@ endwith %}
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1>{{gettext("Fundraising")}}</h1>
+          <h1>{{gettext("Funding")}}</h1>
           <div class="section-desc">
-            {{gettext("We are a well-capitalized startup that has sold tokens in
-            three previous rounds to build our platform.")}}
+            {{gettext("Origin's native token is called OGN. Today, OGN is publicly traded on top exchanges like Coinbase, Binance and Huobi.")}}
+            <br>
+            {{gettext("We previously raised funding from presale investors across three previous rounds to build our platform.")}}
           </div>
           <!-- <img src="/static/img/investors/graph.svg" /> -->
         </div>
@@ -59,12 +60,11 @@ endwith %}
         </div>
         <div class="col-12 col-md-6">
           <div class="investment-counter investors">{{gettext("800+")}}</div>
-          <div class="investment-caption">{{gettext("investors")}}</div>
+          <div class="investment-caption">{{gettext("presale investors")}}</div>
         </div>
         <div class="col-12">
           <div class="get-stake-desc">
-            {{gettext("Interested in getting a stake in Origin? Sign up to
-            receive the latest updates.")}}
+            {{gettext("Sign up to get regular token holder updates:")}}
           </div>
           {% include 'components/email-input.html' %}
         </div>
