--- a/templates/litepaper/sidebar.html
+++ b/templates/litepaper/sidebar.html
@@ -15,8 +15,8 @@
       <span class="content-index">03</span> 
       <span>{{gettext("Origin Commerce Platform")}}</span>
     </a>
-      <a class="nav-link" href="#dshopNFTlaunchpad">
-        <span>{{gettext("Dshop NFT Launchpad")}}</span>
+      <a class="nav-link" href="#NFTlaunchpad">
+        <span>{{gettext("NFT Launchpad")}}</span>
       </a>
       <a class="nav-link" href="#nftMarketplace">
         <span>{{gettext("NFT Marketplace")}}</span>
