--- a/static/css/pages/product.css
+++ b/static/css/pages/product.css
@@ -31,6 +31,19 @@
   min-height: 52px;
 }
 
+.nft-launchpad {
+  background-color: #fafbfc;
+}
+.nft-launchpad .nft-benefits {
+  max-width: 900px;
+}
+.nft-launchpad .nft-benefits h4 {
+  font-weight: bold;
+  font-size:16px;
+  padding:0;
+}
+
+
 .dshop-section {
   background-color: #fafbfc;
 }
