--- a/templates/footer.html
+++ b/templates/footer.html
@@ -32,20 +32,6 @@
       <div class="col-12 col-md-6 pl-3 pl-md-4">
         <div class="row footer-links">
           <div class="col-4 d-flex flex-column">
-            <strong>Products</strong>
-            <a href="{{ url_for('product', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Overview") }}</a>
-            <a href="{{ url_for('ogn_token', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("OGN") }}</a>
-            <a href="https://www.ousd.com">{{ gettext("OUSD") }}</a>
-            <a href="{{ url_for('dshop', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Dshop") }}</a>
-          </div>
-          <div class="col-4 d-flex flex-column">
-            <strong>Resources</strong>
-            <a href="{{ url_for('videos', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Videos") }}</a>
-            <a href="{{ url_for('developers', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Developers") }}</a>
-            <a href="{{ universal.GITHUB_URL }}">{{ gettext("GitHub") }}</a>
-            <a href="{{ url_for('litepaper', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Litepaper") }}</a>
-          </div>
-          <div class="col-4 d-flex flex-column">
             <strong>Organization</strong>
             <a href="{{ url_for('about', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("About") }}</a>
             <a href="{{ url_for('team', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Team") }}</a>
@@ -53,6 +39,19 @@
             <!-- <a href="https://store.originprotocol.com">{{ gettext("Store") }}</a> -->
             <a href="{{ universal.JOBS_URL }}">{{ gettext("Jobs") }}</a>
           </div>
+          <div class="col-4 d-flex flex-column">
+            <strong>Products</strong>
+            <a href="{{ url_for('product', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("NFTs & more") }}</a>
+            <a href="https://www.ousd.com">{{ gettext("OUSD") }}</a>
+            <a href="{{ url_for('dashboard', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("OGN") }}</a>
+          </div>
+          <div class="col-4 d-flex flex-column">
+            <strong>Resources</strong>
+            <a href="{{ url_for('litepaper', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Litepaper") }}</a>
+            <a href="{{ url_for('videos', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Videos") }}</a>
+            <a href="{{ universal.GITHUB_URL }}">{{ gettext("GitHub") }}</a>
+          </div>
+      
         </div>
         <div class="social-links mt-5">
           <a href="https://www.facebook.com/originprotocol" target="_blank" rel="noopener noreferrer" data-toggle="tooltip" title="{{ gettext("Facebook") }}" data-placement="top">
