--- a/templates/litepaper.html
+++ b/templates/litepaper.html
@@ -17,7 +17,7 @@
         <div class="col-12 col-md-10 d-flex align-items-center">
           <h1 class="title big">
             <span>{{gettext("Litepaper")}}</span>
-            {{gettext("Bringing peer-to-peer commerce and decentralized finance to the masses")}}
+            {{gettext("Bringing NFTs and DeFi to the masses")}}
           </h1>
         </div>
       </div>
