--- a/templates/team.html
+++ b/templates/team.html
@@ -438,7 +438,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   {{ gettext("Project Manager") }}
                 </div>
                 <div class="bio">
-                  {{ gettext("Chase comes from creative + marketing agency life in Los Angeles. She’s managed projects and accounts for clients like YouTube, W Hotels, and Stitch Fix. She's now in charge of creator relationship management at Origin.") }}
+                  {{ gettext("Chase comes from creative and marketing agency life in Los Angeles. She’s managed projects and accounts for clients like YouTube, W Hotels, and Stitch Fix. She's now in charge of creator relationship management at Origin.") }}
                 </div>
               </div>
             </div>
@@ -467,7 +467,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
 
   <br><Br>
 
-  <section class="advisor-team-section grey-section">
+  <section class="advisor-team-section grey-section pb-5">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -561,7 +561,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
     </div>
   </section>
 
-  <section class="advisor-team-section white-section">
+  <section class="advisor-team-section white-section pb-5">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -569,19 +569,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
         </div>
       </div>
       <div class="d-flex flex-sm-row flex-wrap align-items-center justify-content-sm-center justify-content-around">
-        <div class="team-member">
-          <div class="headshot-wrapper">
-            <img src="/static/img/headshot-addison.jpg" class="headshot" alt="Addison Huegel headshot" />
-          </div>
-          <div class="name">
-            <a href="https://www.linkedin.com/in/addisonhuegel/" target="_blank"
-              rel="noopener noreferrer">{{ gettext("Addison Huegel") }}
-            </a>
-          </div>
-          <div class="title">
-            {{ gettext("PR") }}
-          </div>
-        </div>
+        
         <div class="team-member">
           <div class="headshot-wrapper">
             <img src="/static/img/headshot-melody.jpg" class="headshot" alt="Melody He headshot" />
@@ -592,7 +580,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             </a>
           </div>
           <div class="title">
-            {{ gettext("International BD") }}
+            {{ gettext("Spartan Group") }}
           </div>
         </div>
         <div class="team-member">
@@ -605,7 +593,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             </a>
           </div>
           <div class="title">
-            {{ gettext("Advisor") }}
+            {{ gettext("Pantera Capital") }}
           </div>
         </div>
         <div class="team-member">
@@ -618,20 +606,20 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             </a>
           </div>
           <div class="title">
-            {{ gettext("Advisor") }}
+            {{ gettext("Pantera Capital") }}
           </div>
         </div>
         <div class="team-member">
           <div class="headshot-wrapper">
-            <img src="/static/img/headshot-andrew.jpg" class="headshot" alt="Andrew Hyde headshot" />
+            <img src="/static/img/headshot-andrew.jpeg" class="headshot" alt="Andrew Kang headshot" />
           </div>
           <div class="name">
-            <a href="http://www.linkedin.com/in/andrewhyde" target="_blank"
-              rel="noopener noreferrer">{{ gettext("Andrew Hyde") }}
+            <a href="https://twitter.com/Rewkang" target="_blank"
+              rel="noopener noreferrer">{{ gettext("Andrew Kang") }}
             </a>
           </div>
           <div class="title">
-            {{ gettext("Community") }}
+            {{ gettext("Mechanism Capital") }}
           </div>
         </div>
       </div>
@@ -690,8 +678,8 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
         </div>
         <div class="col-12">
           <div class="action-buttons">
-            <a href="https://angel.co/jobs?slug=originprotocol" class="btn btn-primary" target="_blank"
-              rel="noopener noreferrer">{{gettext("View job posts")}}</a>
+            <a href="https://angel.co/originprotocol/jobs" class="btn btn-primary" target="_blank"
+              rel="noopener noreferrer">{{gettext("View open positions")}}</a>
           </div>
         </div>
       </div>
