mobile style tweaks

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -85,8 +85,8 @@
 
   <div class="buy-sell-block ousd-pitch d-flex flex-column justify-content-between align-items-center px-3 px-md-0">
     <div class="container text-center">
-      <h1 class="pt-5">Origin Dollar is the first stablecoin that earns yield while sitting in your wallet</h1>
-      <p>Get access to exciting DeFi returns, with none of the hassles.</p>
+      <h1 class="pt-3">Origin Dollar is the first stablecoin that earns yield while sitting in your wallet</h1>
+      <p class="d-none d-sm-block">Get access to exciting DeFi returns, with none of the hassles.</p>
       <a class="mb-5 mt-5 btn justify-content-center align-items-center" href="https://docs.google.com/forms/d/e/1FAIpQLSf1ArOFye1PWZshoQI5a3TJWIYShC89G6-R8mPgAt92dSiJ9w/viewform">
         {{gettext("Learn more about OUSD")}}</a>
 
