mobile style tweaks

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -89,8 +89,7 @@
       <p class="d-none d-sm-block">Get access to exciting DeFi returns, with none of the hassles.</p>
       <a class="mb-5 mt-5 btn justify-content-center align-items-center" href="https://docs.google.com/forms/d/e/1FAIpQLSf1ArOFye1PWZshoQI5a3TJWIYShC89G6-R8mPgAt92dSiJ9w/viewform">
         {{gettext("Learn more about OUSD")}}</a>
-
-      <p>Currently earning</p>
+      <p class="d-none d-sm-block">Currently earning</p>
       <h2>{{ousd_apy}}% APY</h2>
 
 
