--- a/templates/landing.html
+++ b/templates/landing.html
@@ -23,7 +23,8 @@
     <div id="landing-video-poster" class="video-overlay-poster"></div>
     <div class="video-overlay-gradient"></div>
     <div class="contents d-flex flex-column justify-content-center align-items-center">
-      <h1 class="video-title">{{gettext("Connecting artists<br>directly with their fans")}}</h1>
+      <h1 class="video-title">{{gettext("Watch this video<br>before it's deleted from YouTube forever")}}</h1>
+      <p>Visit <a href="https://www.charliebitme.com" style='color:#fff; font-weight:bold'>charliebitme.com</a> to learn why</p>
       <button id="index-video-button" class="play-button d-flex justify-content-center align-items-center m-4">
         <img class="ml-2" src="/static/img/landing/play-triangle.svg"/>
       </button>
