update header video, fix the broken OUSD link & randomize the featured videos

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -23,8 +23,7 @@
     <div id="landing-video-poster" class="video-overlay-poster"></div>
     <div class="video-overlay-gradient"></div>
     <div class="contents d-flex flex-column justify-content-center align-items-center">
-      <h1 class="video-title">{{gettext("Watch this video<br>before it's deleted from YouTube forever")}}</h1>
-      <p>Visit <a href="https://www.charliebitme.com" style='color:#fff; font-weight:bold'>charliebitme.com</a> to learn why</p>
+      <h1 class="video-title">{{gettext("Bringing NFTs and DeFi<br>to the masses")}}</h1>
       <button id="index-video-button" class="play-button d-flex justify-content-center align-items-center m-4">
         <img class="ml-2" src="/static/img/landing/play-triangle.svg"/>
       </button>
@@ -88,7 +87,7 @@
     <div class="container text-center">
       <h1 class="pt-3">Origin Dollar is the first stablecoin that earns yield while sitting in your wallet</h1>
       <p class="d-none d-sm-block">Get access to exciting DeFi returns, with none of the hassles.</p>
-      <a class="mb-5 mt-5 btn justify-content-center align-items-center" href="https://docs.google.com/forms/d/e/1FAIpQLSf1ArOFye1PWZshoQI5a3TJWIYShC89G6-R8mPgAt92dSiJ9w/viewform">
+      <a class="mb-5 mt-5 btn justify-content-center align-items-center" href="https://www.ousd.com">
         {{gettext("Learn more about OUSD")}}</a>
       <p class="d-none d-sm-block">Currently earning</p>
       <h2>{{ousd_apy}}% APY</h2>
