add 3lau as an advisor

--- a/templates/team.html
+++ b/templates/team.html
@@ -622,6 +622,19 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             {{ gettext("Mechanism Capital") }}
           </div>
         </div>
+        <div class="team-member">
+          <div class="headshot-wrapper">
+            <img src="/static/img/investors/justin.jpg" class="headshot" alt="Justin Blau headshot" />
+          </div>
+          <div class="name">
+            <a href="https://twitter.com/3lau" target="_blank"
+              rel="noopener noreferrer">{{ gettext("Justin Blau") }}
+            </a>
+          </div>
+          <div class="title">
+            {{ gettext("3LAU") }}
+          </div>
+        </div>
       </div>
     </div>
   </section>
