--- a/templates/team.html
+++ b/templates/team.html
@@ -232,19 +232,18 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
-                  <img src="/static/img/headshot-anna.jpg" class="headshot" alt="Anna Wang headshot" />
+                  <img src="/static/img/headshot-anna.jpg" class="headshot" alt="Anna Crouy headshot" />
                 </div>
                 <div class="name">
                   <a href="https://www.linkedin.com/in/anna-wang-sijia/" target="_blank"
-                    rel="noopener noreferrer">{{ gettext("Anna Wang") }}
+                    rel="noopener noreferrer">{{ gettext("Anna Crouy") }}
                   </a>
                 </div>
                 <div class="title">
-                  {{ gettext("Regional Manager China") }}
+                  {{ gettext("Collector Relations") }}
                 </div>
                 <div class="bio">
-                  {{ gettext("Anna is leading our community efforts for Chinese
-                  speakers. Before Origin, Anna managed global social media at
+                  {{ gettext("Anna helps ensure that top collectors have a direct relationship to the company. Before Origin, Anna managed global social media at
                   Exness, a leading forex broker. She also co-founded a
                   non-profit in Australia.") }}
                 </div>
