hide dshop section

--- a/templates/product.html
+++ b/templates/product.html
@@ -99,7 +99,7 @@
   </div>
 </div>
 
-
+<!--
   <div class="dshop-section d-flex flex-column justify-content-between align-items-center px-3 px-md-0">
     <h1>{{gettext("Dshop")}}</h1>
     <div class="sub-title">{{gettext("A decentralized and open source e-commerce platform that allows anyone to create an online store easily")}}</div>
@@ -151,9 +151,9 @@
     </div>
     <div class="sub-title-footer">{{gettext("...and hundreds more")}}</div>
   </div>
+-->
 
-
-  <section class="tokens-section blue-section">
+  <section class="tokens-section white-section">
     <div class="container">
       <div class="row">
         <div class="col-12">
