--- a/templates/landing.html
+++ b/templates/landing.html
@@ -54,6 +54,13 @@
     <div class="justify-content-center">
     <div class="container mb-5">
       <div class="drops-section row justify-content-center">
+
+        
+        <div class="col-12 col-sm-6 col-md-2 drop text-center">
+          <a target="_blank" rel="noopener noreferrer" href="https://tabong.brave.com/">
+            <img src="https://partner-assets-prod.ogn.app/brave/lg/brave-logo-color-rgb-reversed-3-x.3b6938ea.png" style="-webkit-filter: invert(100%) grayscale(100%)"/>
+          </a>
+        </div>
         <div class="col-12 col-sm-6 col-md-2 drop text-center">
           <a target="_blank" rel="noopener noreferrer" href="https://nft.monoxkii.com/">
             <img src="https://nft.monoxkii.com/static/images/logo.ec07fe3a.png" style="-webkit-filter: invert(100%);"/>
