--- a/templates/landing.html
+++ b/templates/landing.html
@@ -102,7 +102,7 @@
           </a>
         </div>
         <div class="col-12 col-sm-6 col-md-2 drop text-center large">
-          <a target="_blank" rel="noopener noreferrer" href="http://nft.lupfiasco.com/" style="-webkit-filter: grayscale(100%)">
+          <a target="_blank" rel="noopener noreferrer" href="http://nft.lupefiasco.com/" style="-webkit-filter: grayscale(100%)">
             <img src="https://nft.lupefiasco.com/static/images/logo.f90be243.png"/>
           </a>
         </div>
